# clinical-cue-calibration

./: .gitignore  .zenodo.json  AUTHORING.md  CITATION.cff  DESIGN.md  README.md  pyproject.toml  run_eval.py
cases/: README.md  TEMPLATE.yaml  detect-001.yaml  inquire-001.yaml  resist-001.yaml
results/2026-07-19/: report.md
schema/: case.schema.json
